# hospital-3

./: CMakeLists.txt  hospital-3.cpp  hospital-3.h
Include/: Cita.hpp  Doctor.hpp  Paciente.hpp
src/: Cita.cpp  Doctor.cpp  Paciente.cpp  main.cpp
